<resources>
    <string name="app_name">Schpoop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="select_template">Select template</string>
    <string name="meme_hint_top_text">Top text</string>
    <string name="meme_hint_bottom_text">Bottom text</string>
    <string name="meme_title">Title</string>
    <string name="meme_create">Create meme</string>
    <string name="template_image_from_gallery">Image from gallery</string>
    <string name="template_image_from_camera">Image from camera</string>
    <string name="template_title">Title</string>
    <string name="template_create">Create template</string>
    <string name="sign_up_button">Register</string>
    <string name="sign_up_completion_message">Registered!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="signed_in_completion_text">Signed in!</string>
    <string name="sign_in_button">Sign In</string>
    <string name="nav_home">Home</string>
    <string name="nav_template">Template</string>
    <string name="nav_create_meme">Create meme</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_sign_in">Sign in</string>
    <string name="nav_sign_up">Register</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="create_template">Create template</string>
    <string name="nav_create_template">Create template</string>
    <string name="no_file_access">Acess to file system is required</string>
    <string name="external_storage_explaination">Please allow External Storage permission in App Settings.</string>
    <string name="meme_unable_to_create">Unable to create meme...</string>
    <string name="meme_template_unable_to_create">Unable to create meme template...</string>
    <string name="permission_granted_local_drive">Permission Granted, Now you can use local drive .</string>
    <string name="permision_denied_local_drive">Permission Denied, You cannot use local drive .</string>
    <string name="meme_description">Meme</string>
    <string name="author_default_text">Author</string>
    <string name="upvote_btn_text">▲</string>
    <string name="downvote_btn_text">▼</string>
    <string name="remove">Remove</string>
    <string name="remove_meme">Remove meme</string>
    <string name="remove_meme_message">Are you sure you want to remove this meme?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
