<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/closeDrawerButton"
            android:title=""
            android:icon="@drawable/backbutton" />
        <item
            android:id="@+id/navHome"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/navTemplates"
            android:title="@string/nav_template" />
        <item
            android:id="@+id/navCreateTemplate"
            android:title="@string/nav_create_template"/>
        <item
            android:id="@+id/navCreateMeme"
            android:title="@string/nav_create_meme" />
        <item
            android:id="@+id/navSignOut"
            android:title="@string/nav_sign_out" />
    </group>
</menu>