<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <Button
        android:id="@+id/selectTemplateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_template" />

    <LinearLayout
        android:id="@+id/editNewMemeFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/topTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/meme_hint_top_text"
            android:inputType="text" />

        <ImageView
            android:id="@+id/createMemeTemplateImage"
            android:layout_width="match_parent"
            android:layout_height="284dp"
            android:scaleType="fitCenter"
            android:src="@drawable/question_mark" />

        <EditText
            android:id="@+id/bottomTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/meme_hint_bottom_text"
            android:inputType="text" />

        <EditText
            android:id="@+id/memeTitleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/meme_title"
            android:inputType="text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10" />

        <Button
            android:id="@+id/createMemeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meme_create"/>
    </LinearLayout>

</LinearLayout>
